--- a/home.html
+++ b/home.html
@@ -33,6 +33,7 @@
       <button class="btn" onclick="location.href='admin.html'">Admin<span>Operator tools</span></button>
       <button class="btn" onclick="location.href='blackjack.html'">Blackjack<span>Play cards vs dealer</span></button>
       <button class="btn" onclick="location.href='plinko.html'">Plinko<span>Drop balls and get money</span></button>
+      <button class="btn" onclick="location.href='limbo.html'">limbo<span>Dont let the multiplyers get to big</span><button>
       <button class="btn danger" onclick="signOut()">Sign Out<span>Clear login and return</span></button>
     </div>
 
@@ -60,5 +61,6 @@
   </script>
 </body>
 </html>
+
 
 
