--- a/home.html
+++ b/home.html
@@ -90,6 +90,10 @@
       <button class="btn" onclick="location.href='limbo.html'">Limbo
         <span>Don't let the multipliers get too big</span>
       </button>
+
+      <button class="btn" onclick="location.href='5carddraw'">5 card draw
+        <span>poker 5 cards</span>
+      </button>
     </div>
 
     <footer>
@@ -116,3 +120,4 @@
   </script>
 </body>
 </html>
+
