--- a/home.html
+++ b/home.html
@@ -94,6 +94,10 @@
       <button class="btn" onclick="location.href='5carddraw'">5 card draw
         <span>poker 5 cards</span>
       </button>
+
+      <button class="btn" onclick="location.href='roulette'">roulette
+        <span>let the wheel spin</span>
+      </button>
     </div>
 
     <footer>
@@ -120,4 +124,5 @@
   </script>
 </body>
 </html>
+
 
