--- a/home.html
+++ b/home.html
@@ -71,10 +71,14 @@
 
     <div class="grid" role="navigation" aria-label="launcher">
       <!-- Updates green, Admin purple -->
-      <button class="btn green" onclick="location.href='update.html'">Updates
-        <span>Latest changes</span>
+      <button onclick="window.open('https://nathanm32712.github.io/html-hub/', '_blank')">
+    Open HTML Hub
       </button>
-
+      <button class="btn green" onclick="location.href='https://nathanm32712.github.io/html-hub/'">
+    Open Hub
+        <span>Visit HTML Hub</span>
+      </button>
+      
       <button class="btn purple" onclick="location.href='admin.html'">Admin
         <span>Operator tools</span>
       </button>
@@ -124,5 +128,6 @@
   </script>
 </body>
 </html>
+
 
 
