--- a/home.html
+++ b/home.html
@@ -1,31 +1,1 @@
-<div class="grid" role="navigation" aria-label="launcher">
-  <!-- Hub button styled like the others -->
-  <button class="btn green" onclick="window.open('https://nathanm32712.github.io/html-hub/', '_blank')">
-    Open HTML Hub
-    <span>Visit HTML Hub</span>
-  </button>
-  
-  <button class="btn purple" onclick="location.href='admin.html'">Admin
-    <span>Operator tools</span>
-  </button>
-
-  <button class="btn" onclick="location.href='blackjack.html'">Blackjack
-    <span>Play cards vs dealer</span>
-  </button>
-
-  <button class="btn" onclick="location.href='plinko.html'">Plinko
-    <span>Drop balls and get money</span>
-  </button>
-
-  <button class="btn" onclick="location.href='limbo.html'">Limbo
-    <span>Don't let the multipliers get too big</span>
-  </button>
-
-  <button class="btn" onclick="location.href='5carddraw'">5 card draw
-    <span>poker 5 cards</span>
-  </button>
-
-  <button class="btn" onclick="location.href='roulette'">Roulette
-    <span>let the wheel spin</span>
-  </button>
-</div>
+<!doctype html> <html lang="en"> <head> <meta charset="utf-8" /> <title>Home Launcher</title> <meta name="viewport" content="width=device-width,initial-scale=1" /> <style> :root{ --bg:#071018; --fg:#cfefff; --accent:#00aaff; --muted:#7fbfdc; --green:#46d37a; --purple:#8a5cff; --danger1:#ff5a5a; --danger2:#cc0000; --card:#082b3d; } html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font-family:Segoe UI, Roboto, system-ui, sans-serif} .wrap{max-width:880px;margin:40px auto;padding:20px} header{display:flex;justify-content:space-between;align-items:center;gap:12px;margin-bottom:12px} .titleWrap{display:flex;flex-direction:column;gap:6px} h1{font-size:20px;color:var(--accent);margin:0;word-break:break-word} p.lead{color:var(--muted);margin:8px 0 18px 0} .grid{display:flex;flex-wrap:wrap;gap:12px} .btn{ background:linear-gradient(180deg,var(--accent),#0088cc); color:#001;border:none;padding:14px 18px;border-radius:10px;font-weight:700; cursor:pointer;min-width:160px;text-align:left;box-shadow:0 6px 18px rgba(0,0,0,0.35) } .btn span{display:block;font-size:13px;color:rgba(0,0,0,0.5);margin-top:6px} .btn.green{background:linear-gradient(180deg,var(--green),#2fa85a);color:#012a12} .btn.purple{background:linear-gradient(180deg,var(--purple),#6f3be0);color:#0b0220} .btn.danger{background:linear-gradient(180deg,var(--danger1),var(--danger2));color:#fff} /* box for sign out in header */ .signBox{ background:var(--card); padding:8px; border-radius:10px; box-shadow:0 8px 20px rgba(0,0,0,0.45); display:flex; align-items:center; gap:8px; } .signBox .btn{min-width:120px;padding:10px 12px} footer{margin-top:34px;font-size:13px;color:var(--muted);text-align:center} a.inline{color:var(--accent);text-decoration:none} @media (max-width:600px){ .btn{min-width:120px;padding:12px 14px;font-size:14px} .grid{justify-content:center} header{flex-direction:column;align-items:flex-start;gap:10px} } </style> </head> <body> <div class="wrap"> <header> <div class="titleWrap"> <h1 id="mainTitle">Game Launcher — device-id: loading…</h1> <div class="leadWrap"><p class="lead">Choose a game or page to open:</p></div> </div> <!-- Sign out placed inside a boxed card --> <div class="signBox" role="group" aria-label="account actions"> <button class="btn danger" onclick="signOut()"> Sign Out <span style="color:rgba(255,255,255,0.85);font-weight:600">Clear login and return</span> </button> </div> </header> <div class="grid" role="navigation" aria-label="launcher"> <!-- Updates green, Admin purple --> <button onclick="window.open('https://nathanm32712.github.io/html-hub/', '_blank')"> Open HTML Hub </button> <button class="btn green" onclick="location.href='https://nathanm32712.github.io/html-hub/'"> Open Hub <span>Visit HTML Hub</span> </button> <button class="btn purple" onclick="location.href='admin.html'">Admin <span>Operator tools</span> </button> <button class="btn" onclick="location.href='blackjack.html'">Blackjack <span>Play cards vs dealer</span> </button> <button class="btn" onclick="location.href='plinko.html'">Plinko <span>Drop balls and get money</span> </button> <button class="btn" onclick="location.href='limbo.html'">Limbo <span>Don't let the multipliers get too big</span> </button> <button class="btn" onclick="location.href='5carddraw'">5 card draw <span>poker 5 cards</span> </button> <button class="btn" onclick="location.href='roulette'">roulette <span>let the wheel spin</span> </button> </div> <footer> Made by Nathan Marty — questions: 715‑294‑0249 or join the discord<br/> <a class="inline" href="https://discord.gg/k2WmBxetb7">https://discord.gg/k2WmBxetb7</a> </footer> </div> <script> (function () { const title = document.getElementById('mainTitle'); let id = null; try { id = localStorage.getItem('device-id'); } catch (e) { id = null; } const display = id && id.trim() ? id.trim() : 'unknown'; title.textContent = `Game Launcher — device-id: ${display}`; })(); function signOut() { // Clear localaccount cookie document.cookie = "localaccount=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;"; // Redirect to index.html location.href = 'index.html'; } </script> </body> </html>
