--- a/admin.html
+++ b/admin.html
@@ -87,7 +87,7 @@
 
   <script>
     (function(){
-      const ALLOWED_IDS = ['LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','id-0tlx2kgb','id-cztpnlhe','device-ul5qv0ul',];
+      const ALLOWED_IDS = ['LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','id-0tlx2kgb','id-cztpnlhe','device-ul5qv0ul','yeah bc Im better than you',];
       const BALANCE_KEY = 'slotsBalance';
 
       const statusEl = document.getElementById('status');
@@ -146,6 +146,7 @@
   </script>
 </body>
 </html>
+
 
 
 
