--- a/home.html
+++ b/home.html
@@ -98,6 +98,10 @@
       <button class="btn" onclick="location.href='roulette.html'">Roulette
         <span>Let the wheel spin</span>
       </button>
+
+      <button class="btn" onclick="location.href='invest.html'">invest
+        <span>just like the stock markets</span>
+      </button>
     </div>
 
     <footer>
@@ -122,3 +126,4 @@
   </script>
 </body>
 </html>
+
